crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__rust_style_functions.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"let foo = () => { let x = Math.random(); x };\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..45,
                pattern: Ident(
                    BindingIdent {
                        span: 4..7,
                        id: Ident {
                            span: 4..7,
                            name: "foo",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    Lambda(
                        Lambda {
                            span: 10..44,
                            params: [],
                            body: Let(
                                Let {
                                    span: 18..40,
                                    pattern: Some(
                                        Ident(
                                            BindingIdent {
                                                span: 22..23,
                                                id: Ident {
                                                    span: 22..23,
                                                    name: "x",
                                                },
                                            },
                                        ),
                                    ),
                                    type_ann: None,
                                    init: App(
                                        App {
                                            span: 26..39,
                                            lam: Member(
                                                Member {
                                                    span: 26..37,
                                                    obj: Ident(
                                                        Ident {
                                                            span: 26..30,
                                                            name: "Math",
                                                        },
                                                    ),
                                                    prop: Ident(
                                                        Ident {
                                                            span: 31..37,
                                                            name: "random",
                                                        },
                                                    ),
                                                },
                                            ),
                                            args: [],
                                        },
                                    ),
                                    body: Ident(
                                        Ident {
                                            span: 41..42,
                                            name: "x",
                                        },
                                    ),
                                },
                            ),
                            is_async: false,
                            return_type: None,
                            type_params: None,
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
