crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__strings-4.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"\\\"a \\\\u2212 b\\\";\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..13,
                expr: Lit(
                    Str(
                        Str {
                            span: 0..12,
                            value: "a − b",
                        },
                    ),
                ),
            },
        ],
    },
)
