crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__tagged_template_literals.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"sql`SELECT * FROM ${table} WHERE id = ${id}`\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..44,
                expr: TaggedTemplateLiteral(
                    TaggedTemplateLiteral {
                        span: 0..44,
                        tag: Ident {
                            span: 0..3,
                            name: "sql",
                        },
                        template: TemplateLiteral {
                            span: 3..44,
                            exprs: [
                                Ident(
                                    Ident {
                                        span: 20..25,
                                        name: "table",
                                    },
                                ),
                                Ident(
                                    Ident {
                                        span: 40..42,
                                        name: "id",
                                    },
                                ),
                            ],
                            quasis: [
                                TemplateElem {
                                    span: 4..18,
                                    raw: Str(
                                        Str {
                                            span: 4..18,
                                            value: "SELECT * FROM ",
                                        },
                                    ),
                                    cooked: Str(
                                        Str {
                                            span: 4..18,
                                            value: "SELECT * FROM ",
                                        },
                                    ),
                                },
                                TemplateElem {
                                    span: 26..38,
                                    raw: Str(
                                        Str {
                                            span: 26..38,
                                            value: " WHERE id = ",
                                        },
                                    ),
                                    cooked: Str(
                                        Str {
                                            span: 26..38,
                                            value: " WHERE id = ",
                                        },
                                    ),
                                },
                                TemplateElem {
                                    span: 43..43,
                                    raw: Str(
                                        Str {
                                            span: 43..43,
                                            value: "",
                                        },
                                    ),
                                    cooked: Str(
                                        Str {
                                            span: 43..43,
                                            value: "",
                                        },
                                    ),
                                },
                            ],
                        },
                    },
                ),
            },
        ],
    },
)
