crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__template_literals-4.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(r#\"`Hello, \"world\"`\"#)"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..16,
                expr: TemplateLiteral(
                    TemplateLiteral {
                        span: 0..16,
                        exprs: [],
                        quasis: [
                            TemplateElem {
                                span: 1..15,
                                raw: Str(
                                    Str {
                                        span: 1..15,
                                        value: "Hello, \"world\"",
                                    },
                                ),
                                cooked: Str(
                                    Str {
                                        span: 1..15,
                                        value: "Hello, \"world\"",
                                    },
                                ),
                            },
                        ],
                    },
                ),
            },
        ],
    },
)
