crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__template_literals-5.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"`foo ${`bar ${baz}`}`\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..21,
                expr: TemplateLiteral(
                    TemplateLiteral {
                        span: 0..21,
                        exprs: [
                            TemplateLiteral(
                                TemplateLiteral {
                                    span: 7..19,
                                    exprs: [
                                        Ident(
                                            Ident {
                                                span: 14..17,
                                                name: "baz",
                                            },
                                        ),
                                    ],
                                    quasis: [
                                        TemplateElem {
                                            span: 8..12,
                                            raw: Str(
                                                Str {
                                                    span: 8..12,
                                                    value: "bar ",
                                                },
                                            ),
                                            cooked: Str(
                                                Str {
                                                    span: 8..12,
                                                    value: "bar ",
                                                },
                                            ),
                                        },
                                        TemplateElem {
                                            span: 18..18,
                                            raw: Str(
                                                Str {
                                                    span: 18..18,
                                                    value: "",
                                                },
                                            ),
                                            cooked: Str(
                                                Str {
                                                    span: 18..18,
                                                    value: "",
                                                },
                                            ),
                                        },
                                    ],
                                },
                            ),
                        ],
                        quasis: [
                            TemplateElem {
                                span: 1..5,
                                raw: Str(
                                    Str {
                                        span: 1..5,
                                        value: "foo ",
                                    },
                                ),
                                cooked: Str(
                                    Str {
                                        span: 1..5,
                                        value: "foo ",
                                    },
                                ),
                            },
                            TemplateElem {
                                span: 20..20,
                                raw: Str(
                                    Str {
                                        span: 20..20,
                                        value: "",
                                    },
                                ),
                                cooked: Str(
                                    Str {
                                        span: 20..20,
                                        value: "",
                                    },
                                ),
                            },
                        ],
                    },
                ),
            },
        ],
    },
)
