crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__template_literals-6.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"`line 1\\\\nline 2\\\\nline 3`\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..24,
                expr: TemplateLiteral(
                    TemplateLiteral {
                        span: 0..24,
                        exprs: [],
                        quasis: [
                            TemplateElem {
                                span: 1..23,
                                raw: Str(
                                    Str {
                                        span: 1..23,
                                        value: "line 1\\nline 2\\nline 3",
                                    },
                                ),
                                cooked: Str(
                                    Str {
                                        span: 1..23,
                                        value: "line 1\nline 2\nline 3",
                                    },
                                ),
                            },
                        ],
                    },
                ),
            },
        ],
    },
)
